[package]
name = "ozymandias"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "cli","ozymandias_core"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6"
toml = "0.8"
tokio = { version = "1.45.1", features = ["full"] }
error-stack = "0.5.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
ozymandias_core = { path = "ozymandias_core" }
