[workspace]
members = ["cli", "logging", "ozymandias_core"]
resolver = "2"
package.repository = "https://github.com/anitnilay20/ozymandias"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6"
toml = "0.8"
tokio = { version = "1.45.1", features = ["full"] }
error-stack = "0.5.0"
thiserror = "2.0.12"
tracing = "0.1"
