[package]
name = "ozymandias_core"
version = "0.1.0"
edition = "2021"

[dependencies]
testcontainers = "0.24.0"
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
error-stack = { workspace = true }
